--- a/style.css
+++ b/style.css
@@ -146,17 +146,40 @@ body {
 
 @media screen and (max-width: 34em) {
   .main_heading {
+    margin: 0px;
+    width: 100%;
     font-size: 4.4rem;
   }
 
   .heading-container {
+    margin: 0px;
     padding: 2.4rem;
     flex-direction: column;
+  }
+
+  .hero-container {
+    width: 100vw;
+    margin: 6.4rem 0px;
   }
 
   .heading-image {
     margin-top: 4.8rem;
     width: 30rem;
     height: 30rem;
+  }
+
+  .experience-container {
+    width: 100vw;
+    margin: 6.4rem 0px;
+  }
+
+  .reviews-container {
+    width: 100vw;
+    margin: 6.4rem 0px;
+  }
+
+  .footer-container {
+    width: 100vw;
+    margin: 6.4rem 0px;
   }
 }
